--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,15 +1,21 @@
 html {
     background: black;
     text-align: center;
+    font-family: Verdana;
 }
 h1 {
     color:white;
+    font-size: 50px;
+    
 }
 h2 {
     color: white;
+    font-weight: 300;
+    font-size: 42px;
 }
 p {
-    color: gray
+    color: gray;
+    font-size: 21px;
 }
 .download {
     color: aquamarine;
